--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   uuid: ^4.3.3
   flutter_native_splash: ^2.3.11
   rename: ^3.0.1
-  in_app_update: ^4.2.2
+  # in_app_update: ^4.2.2
 
 dev_dependencies:
   flutter_test:
